--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,9 +1,14 @@
-world: 'Town05'
+world: 'Town10HD_Opt'
 simulation:
   spawn_vehicles: true
   use_camera: true
-  synchronous_mode: false
+  synchronous_mode: true
   ego_vehicle_bp_id: 'vehicle.tesla.model3'
+  ego_vehicle_spawn_point: 12
+  ego_vehicle_target_point: 69
   rgb_camera_id: 'sensor.camera.rgb'
   collision_sensor_id: 'sensor.other.collision'
   ego_vehicle_ap: false
+  time_step: 0.05
+debug:
+  draw_spawn_points: true
